# lottie2gif

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
